Finish Front and Back implementation