@@ -1,66 +1,91 @@
-/*
 package com.example.tareasti_backend.service;
 
 import com.example.tareasti_backend.model.*;
+import com.example.tareasti_backend.repository.AsignacionTareaRepository;
 import com.example.tareasti_backend.repository.TareaRepository;
 import com.example.tareasti_backend.repository.UsuarioRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.Comparator;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.Comparator;
 
 @Service
 public class AsignadorTareasService {
     
     private final UsuarioRepository usuarioRepository;
     private final TareaRepository tareaRepository;
+    private final AsignacionTareaRepository asignacionTareaRepository;
     
-    public AsignadorTareasService(UsuarioRepository usuarioRepository, TareaRepository tareaRepository) {
+    public AsignadorTareasService(UsuarioRepository usuarioRepository, TareaRepository tareaRepository, AsignacionTareaRepository asignacionTareaRepository) {
         this.usuarioRepository = usuarioRepository;
         this.tareaRepository = tareaRepository;
+        this.asignacionTareaRepository = asignacionTareaRepository;
     }
     
     @Transactional
     public void asignarTareasAutomaticamente() {
         List<Tarea> tareasPendientes = tareaRepository.findByEstado(EstadoTarea.PENDIENTE);
-        List<Usuario> usuariosDisponibles = usuarioRepository.findByDisponibleTrue();
         
-        tareasPendientes.forEach(tarea -> {
-            Optional<Usuario> usuarioOpt = encontrarUsuarioAdecuado(tarea, usuariosDisponibles);
+        for (Tarea tarea : tareasPendientes) {
+            Optional<Usuario> usuarioOpt = encontrarUsuarioAdecuado(tarea);
+            
             usuarioOpt.ifPresent(usuario -> {
+                AsignacionTarea asignacion = new AsignacionTarea();
+                asignacion.setTarea(tarea);
+                asignacion.setUsuario(usuario);
+                asignacion.setFechaAsignacion(LocalDateTime.now());
+                asignacion.setComentarios("Asignado automáticamente");
+                asignacionTareaRepository.save(asignacion);
+
                 tarea.setAsignadoA(usuario);
                 tarea.setEstado(EstadoTarea.EN_PROGRESO);
                 tareaRepository.save(tarea);
             });
-        });
-    }
-    
-    private Optional<Usuario> encontrarUsuarioAdecuado(Tarea tarea, List<Usuario> usuarios) {
-        return usuarios.stream()
-            .filter(u -> cumpleReglasBasicas(u, tarea))
-            .min(Comparator.comparingInt(this::tareasActivas))
-            .filter(u -> tareasActivas(u) < 4); // Regla 3: Máximo 4 tareas
-    }
-    
-    private boolean cumpleReglasBasicas(Usuario usuario, Tarea tarea) {
-        // Regla 1: Solo trabajadores disponibles
-        if (!usuario.isDisponible()) return false;
-        
-        // Regla 2: Priorizar seniors para tareas críticas
-        if (tarea.getPrioridad() == Prioridad.ALTA && usuario.getNivel() != Nivel.SENIOR) {
-            return false;
         }
-        
-        // Coincidencia de rol
-        return usuario.getRol() == tarea.getRolRequerido();
     }
     
-    private int tareasActivas(Usuario usuario) {
-        return tareaRepository.findByAsignadoAId(usuario.getId()).stream()
-            .filter(t -> t.getEstado() != EstadoTarea.COMPLETADA)
-            .toList()
-            .size();
+    private Optional<Usuario> encontrarUsuarioAdecuado(Tarea tarea) {
+        Rol rolRequerido = tarea.getRolRequerido();
+        Prioridad prioridadTarea = tarea.getPrioridad();
+
+        List<Usuario> candidatosBase = usuarioRepository.findByRolAndDisponibleTrue(rolRequerido);
+
+        List<Usuario> candidatosFiltrados = candidatosBase.stream()
+            .filter(u -> asignacionTareaRepository.countActiveTasksByUsuarioId(u.getId()) < 4)
+            .collect(Collectors.toList());
+
+        if (candidatosFiltrados.isEmpty()) {
+            return Optional.empty();
+        }
+
+        if (prioridadTarea == Prioridad.ALTA) {
+            List<Usuario> seniors = candidatosFiltrados.stream()
+                .filter(u -> u.getNivel() == Nivel.SENIOR)
+                .collect(Collectors.toList());
+            
+            if (!seniors.isEmpty()) {
+                return seniors.stream()
+                    .min(Comparator.comparingInt(u -> asignacionTareaRepository.countActiveTasksByUsuarioId(u.getId())));
+            }
+        }
+
+        return candidatosFiltrados.stream()
+            .min(Comparator.comparingInt(u -> asignacionTareaRepository.countActiveTasksByUsuarioId(u.getId())));
+    }
+
+    public List<Tarea> getTareasPendientes() {
+        return tareaRepository.findByEstado(EstadoTarea.PENDIENTE);
+    }
+
+    public List<Usuario> getAllWorkers() {
+        return usuarioRepository.findAll();
+    }
+
+    // Method for Leader Dashboard: Get all tasks
+    public List<Tarea> getAllTasks() {
+        return tareaRepository.findAll();
     }
 }
-*/
